<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cap_nokia.gerson.conversormoedas.MainActivity">


    <EditText
        android:id="@+id/edit_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor"
        android:inputType="number"/>

    <Button
        android:id="@+id/calc_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor_em_dolar"
        android:gravity="start"
        android:layout_marginBottom="20dp"/>
    
    <TextView
        android:id="@+id/dollar_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value_0"
        android:gravity="center"
        android:textSize="40sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor_em_euro"
        android:gravity="start"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/euro_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value_0"
        android:gravity="center"
        android:textSize="40sp" />



</LinearLayout>
